Update browser.java